@@ -4,6 +4,7 @@ import org.junit.jupiter.api.Test;
 
 import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import static org.junit.jupiter.api.Assertions.*;
 
@@ -46,7 +47,7 @@ class SizeRestrictedQueueTest {
         queue = new SizeRestrictedQueue<>(size);
         List<Integer> queueContent = Arrays.stream(elements)
                 .boxed()
-                .toList();
+                .collect(Collectors.toList());
         queue.addAll(queueContent);
     }
 
